--- a/EZBlocker/EZBlocker/EZBlockerMain.resx
+++ b/EZBlocker/EZBlocker/EZBlockerMain.resx
@@ -127,23 +127,8 @@
     <value>348, 16</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="openToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>289, 24</value>
-  </data>
-  <data name="websiteToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>289, 24</value>
-  </data>
-  <data name="undoPatchToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>289, 24</value>
-  </data>
-  <data name="separatorToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>286, 6</value>
-  </data>
-  <data name="exitToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>289, 24</value>
-  </data>
   <data name="NotifyIconContextMenu.Size" type="System.Drawing.Size, System.Drawing">
-    <value>290, 106</value>
+    <value>319, 122</value>
   </data>
   <data name="&gt;&gt;NotifyIconContextMenu.Name" xml:space="preserve">
     <value>NotifyIconContextMenu</value>
@@ -7367,15 +7352,36 @@
   <data name="NotifyIcon.Visible" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
+  <data name="openToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>318, 28</value>
+  </data>
+  <data name="websiteToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>318, 28</value>
+  </data>
+  <data name="undoPatchToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>318, 28</value>
+  </data>
+  <data name="undoPatchToolStripMenuItem.Visible" type="System.Boolean, mscorlib">
+    <value>False</value>
+  </data>
+  <data name="separatorToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>315, 6</value>
+  </data>
+  <data name="exitToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>318, 28</value>
+  </data>
   <data name="WebsiteLink.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
+  </data>
+  <data name="WebsiteLink.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Microsoft Sans Serif, 8.059701pt</value>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="WebsiteLink.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
   <data name="WebsiteLink.Location" type="System.Drawing.Point, System.Drawing">
-    <value>179, 133</value>
+    <value>173, 134</value>
   </data>
   <data name="WebsiteLink.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 0, 4, 0</value>
@@ -7384,7 +7390,7 @@
     <value>Yes</value>
   </data>
   <data name="WebsiteLink.Size" type="System.Drawing.Size, System.Drawing">
-    <value>107, 17</value>
+    <value>113, 18</value>
   </data>
   <data name="WebsiteLink.TabIndex" type="System.Int32, mscorlib">
     <value>5</value>
@@ -7407,6 +7413,9 @@
   <metadata name="Heartbeat.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>242, 16</value>
   </metadata>
+  <data name="VolumeMixerButton.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Microsoft Sans Serif, 8.059701pt</value>
+  </data>
   <data name="VolumeMixerButton.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
@@ -7438,19 +7447,19 @@
     <value>True</value>
   </data>
   <data name="StatusLabel.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Microsoft Sans Serif, 8.25pt</value>
+    <value>Microsoft Sans Serif, 8.059701pt</value>
   </data>
   <data name="StatusLabel.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
   <data name="StatusLabel.Location" type="System.Drawing.Point, System.Drawing">
-    <value>13, 133</value>
+    <value>13, 134</value>
   </data>
   <data name="StatusLabel.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 0, 4, 0</value>
   </data>
   <data name="StatusLabel.Size" type="System.Drawing.Size, System.Drawing">
-    <value>71, 17</value>
+    <value>72, 18</value>
   </data>
   <data name="StatusLabel.TabIndex" type="System.Int32, mscorlib">
     <value>9</value>
@@ -7473,6 +7482,9 @@
   <data name="BlockBannersCheckbox.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
+  <data name="BlockBannersCheckbox.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Microsoft Sans Serif, 8.059701pt</value>
+  </data>
   <data name="BlockBannersCheckbox.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
@@ -7483,7 +7495,7 @@
     <value>4, 4, 4, 4</value>
   </data>
   <data name="BlockBannersCheckbox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>139, 21</value>
+    <value>148, 22</value>
   </data>
   <data name="BlockBannersCheckbox.TabIndex" type="System.Int32, mscorlib">
     <value>10</value>
@@ -7503,6 +7515,9 @@
   <data name="StartupCheckbox.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
+  <data name="StartupCheckbox.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Microsoft Sans Serif, 8.059701pt</value>
+  </data>
   <data name="StartupCheckbox.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
@@ -7513,7 +7528,7 @@
     <value>4, 4, 4, 4</value>
   </data>
   <data name="StartupCheckbox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>185, 21</value>
+    <value>196, 22</value>
   </data>
   <data name="StartupCheckbox.TabIndex" type="System.Int32, mscorlib">
     <value>11</value>
@@ -7533,6 +7548,9 @@
   <data name="SpotifyCheckbox.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
+  <data name="SpotifyCheckbox.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Microsoft Sans Serif, 8.059701pt</value>
+  </data>
   <data name="SpotifyCheckbox.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
@@ -7543,7 +7561,7 @@
     <value>4, 4, 4, 4</value>
   </data>
   <data name="SpotifyCheckbox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>201, 21</value>
+    <value>214, 22</value>
   </data>
   <data name="SpotifyCheckbox.TabIndex" type="System.Int32, mscorlib">
     <value>12</value>
@@ -7567,7 +7585,7 @@
     <value>8, 16</value>
   </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>298, 160</value>
+    <value>291, 163</value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
