--- a/EZBlocker/EZBlocker/EZBlockerMain.resx
+++ b/EZBlocker/EZBlocker/EZBlockerMain.resx
@@ -127,8 +127,36 @@
     <value>348, 16</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="openToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>241, 22</value>
+  </data>
+  <data name="websiteToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>241, 22</value>
+  </data>
+  <data name="undoPatchToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>241, 22</value>
+  </data>
+  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="undoPatchToolStripMenuItem.Visible" type="System.Boolean, mscorlib">
+    <value>False</value>
+  </data>
+  <data name="toolStripMenuItem1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>238, 6</value>
+  </data>
+  <data name="unMuteSpotifyToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>241, 22</value>
+  </data>
+  <data name="unMuteSpotifyToolStripMenuItem.Text" xml:space="preserve">
+    <value>Mute Spotify</value>
+  </data>
+  <data name="separatorToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>238, 6</value>
+  </data>
+  <data name="exitToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>241, 22</value>
+  </data>
   <data name="NotifyIconContextMenu.Size" type="System.Drawing.Size, System.Drawing">
-    <value>319, 122</value>
+    <value>242, 148</value>
   </data>
   <data name="&gt;&gt;NotifyIconContextMenu.Name" xml:space="preserve">
     <value>NotifyIconContextMenu</value>
@@ -7348,27 +7376,8 @@
   <data name="NotifyIcon.Text" xml:space="preserve">
     <value>EZBlocker</value>
   </data>
-  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="NotifyIcon.Visible" type="System.Boolean, mscorlib">
     <value>True</value>
-  </data>
-  <data name="openToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>318, 28</value>
-  </data>
-  <data name="websiteToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>318, 28</value>
-  </data>
-  <data name="undoPatchToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>318, 28</value>
-  </data>
-  <data name="undoPatchToolStripMenuItem.Visible" type="System.Boolean, mscorlib">
-    <value>False</value>
-  </data>
-  <data name="separatorToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>315, 6</value>
-  </data>
-  <data name="exitToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>318, 28</value>
   </data>
   <data name="WebsiteLink.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -7381,16 +7390,13 @@
     <value>NoControl</value>
   </data>
   <data name="WebsiteLink.Location" type="System.Drawing.Point, System.Drawing">
-    <value>173, 134</value>
-  </data>
-  <data name="WebsiteLink.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 0, 4, 0</value>
+    <value>130, 109</value>
   </data>
   <data name="WebsiteLink.RightToLeft" type="System.Windows.Forms.RightToLeft, System.Windows.Forms">
     <value>Yes</value>
   </data>
   <data name="WebsiteLink.Size" type="System.Drawing.Size, System.Drawing">
-    <value>113, 18</value>
+    <value>80, 13</value>
   </data>
   <data name="WebsiteLink.TabIndex" type="System.Int32, mscorlib">
     <value>5</value>
@@ -7420,13 +7426,10 @@
     <value>NoControl</value>
   </data>
   <data name="VolumeMixerButton.Location" type="System.Drawing.Point, System.Drawing">
-    <value>16, 7</value>
-  </data>
-  <data name="VolumeMixerButton.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 4, 4, 4</value>
+    <value>12, 6</value>
   </data>
   <data name="VolumeMixerButton.Size" type="System.Drawing.Size, System.Drawing">
-    <value>267, 44</value>
+    <value>200, 36</value>
   </data>
   <data name="VolumeMixerButton.TabIndex" type="System.Int32, mscorlib">
     <value>7</value>
@@ -7453,13 +7456,10 @@
     <value>NoControl</value>
   </data>
   <data name="StatusLabel.Location" type="System.Drawing.Point, System.Drawing">
-    <value>13, 134</value>
-  </data>
-  <data name="StatusLabel.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 0, 4, 0</value>
+    <value>10, 109</value>
   </data>
   <data name="StatusLabel.Size" type="System.Drawing.Size, System.Drawing">
-    <value>72, 18</value>
+    <value>54, 13</value>
   </data>
   <data name="StatusLabel.TabIndex" type="System.Int32, mscorlib">
     <value>9</value>
@@ -7489,13 +7489,10 @@
     <value>NoControl</value>
   </data>
   <data name="BlockBannersCheckbox.Location" type="System.Drawing.Point, System.Drawing">
-    <value>16, 59</value>
-  </data>
-  <data name="BlockBannersCheckbox.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 4, 4, 4</value>
+    <value>12, 48</value>
   </data>
   <data name="BlockBannersCheckbox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>148, 22</value>
+    <value>111, 17</value>
   </data>
   <data name="BlockBannersCheckbox.TabIndex" type="System.Int32, mscorlib">
     <value>10</value>
@@ -7522,13 +7519,10 @@
     <value>NoControl</value>
   </data>
   <data name="StartupCheckbox.Location" type="System.Drawing.Point, System.Drawing">
-    <value>16, 83</value>
-  </data>
-  <data name="StartupCheckbox.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 4, 4, 4</value>
+    <value>12, 67</value>
   </data>
   <data name="StartupCheckbox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>196, 22</value>
+    <value>145, 17</value>
   </data>
   <data name="StartupCheckbox.TabIndex" type="System.Int32, mscorlib">
     <value>11</value>
@@ -7555,13 +7549,10 @@
     <value>NoControl</value>
   </data>
   <data name="SpotifyCheckbox.Location" type="System.Drawing.Point, System.Drawing">
-    <value>16, 108</value>
-  </data>
-  <data name="SpotifyCheckbox.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 4, 4, 4</value>
+    <value>12, 88</value>
   </data>
   <data name="SpotifyCheckbox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>214, 22</value>
+    <value>158, 17</value>
   </data>
   <data name="SpotifyCheckbox.TabIndex" type="System.Int32, mscorlib">
     <value>12</value>
@@ -7582,10 +7573,10 @@
     <value>True</value>
   </metadata>
   <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
-    <value>8, 16</value>
+    <value>6, 13</value>
   </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>291, 163</value>
+    <value>218, 132</value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -14796,9 +14787,6 @@
         AADAAwAA4AcAAPAPAAA=
 </value>
   </data>
-  <data name="$this.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 4, 4, 4</value>
-  </data>
   <data name="$this.RightToLeftLayout" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
@@ -14838,6 +14826,12 @@
   <data name="&gt;&gt;undoPatchToolStripMenuItem.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="&gt;&gt;toolStripMenuItem1.Name" xml:space="preserve">
+    <value>toolStripMenuItem1</value>
+  </data>
+  <data name="&gt;&gt;toolStripMenuItem1.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripSeparator, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="&gt;&gt;separatorToolStripMenuItem.Name" xml:space="preserve">
     <value>separatorToolStripMenuItem</value>
   </data>
@@ -14855,6 +14849,12 @@
   </data>
   <data name="&gt;&gt;Heartbeat.Type" xml:space="preserve">
     <value>System.Windows.Forms.Timer, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;unMuteSpotifyToolStripMenuItem.Name" xml:space="preserve">
+    <value>unMuteSpotifyToolStripMenuItem</value>
+  </data>
+  <data name="&gt;&gt;unMuteSpotifyToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
     <value>Main</value>
